--- a/docs/theme/custom.css
+++ b/docs/theme/custom.css
@@ -1,5 +1,9 @@
 @import url(solarized.css);
 
+a {
+    text-shadow: 0px 0px 2px rgba(150, 150, 150, 1);
+}
+
 .reveal section img {
     border: none;
 }
